--- a/ikkachi music 2.0.1.html
+++ b/ikkachi music 2.0.1.html
@@ -46,9 +46,9 @@
     <section class="p-10 text-center">
         <h3 class="text-4xl font-bold mb-6">🎶 Now Playing</h3>
         <div class="bg-gray-800 p-6 rounded-lg inline-block shadow-lg">
-            <p class="text-xl font-semibold">Song Title - Artist</p>
+            <p class="text-xl font-semibold">The Weeknd - São Paulo</p>
             <audio controls class="mt-4 w-64">
-                <source src="https://github.com/blooper-ser/musickkk/blob/026be9c4d89c2ab2b33ac7996e6901378c6b4317/The%20Weeknd%20-%20S%C3%A3o%20Paulo.mp3" type="audio/mp3">
+                <source src="C:\Users\ADMIN\OneDrive\Documents\GITHUB\musickkk\The Weeknd - São Paulo.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </div>
