--- a/ikkachi music 2.0.1.html
+++ b/ikkachi music 2.0.1.html
@@ -48,7 +48,7 @@
         <div class="bg-gray-800 p-6 rounded-lg inline-block shadow-lg">
             <p class="text-xl font-semibold">The Weeknd - São Paulo</p>
             <audio controls class="mt-4 w-64">
-                <source src="C:\Users\ADMIN\OneDrive\Documents\GITHUB\musickkk\The Weeknd - São Paulo.mp3" type="audio/mpeg">
+                <source src="C:\Users\ADMIN\OneDrive\Documents\GITHUB\musickkk\songs\The Weeknd - São Paulo.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </div>
