--- a/ikkachi music 2.0.1.html
+++ b/ikkachi music 2.0.1.html
@@ -23,11 +23,11 @@
     </header>
     
     <section class="p-10">
-        <h3 class="text-4xl font-bold mb-6 text-center">🔥 Latest Releases</h3>
+        <h3 class="text-4xl font-bold mb-6 text-center"> Popular Albums 🎶</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
             <div class="bg-gray-800 p-4 rounded-lg shadow-lg hover:scale-105 transition duration-300">
-                <img src="https://via.placeholder.com/300" class="rounded-lg w-full" alt="Album Cover">
-                <h4 class="mt-3 text-2xl font-semibold">Song Title - Artist</h4>
+                <img src="https://github.com/blooper-ser/musickkk/blob/main/cover/rifleclub.png" class="rounded-lg w-full" alt="Album Cover">
+                <h4 class="mt-3 text-2xl font-semibold">Rifle Club</h4>
                 <button class="mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg shadow-md hover:bg-blue-600 transition duration-300">Play</button>
             </div>
             <div class="bg-gray-800 p-4 rounded-lg shadow-lg hover:scale-105 transition duration-300">
