changes added in html codes added four songs
Co-authored-by: XCOR  <saviovincent757@gmail.com>

--- a/ikkachi music 2.0.1.html
+++ b/ikkachi music 2.0.1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sub Music Home</title>
+    <title>Ikkachi Music</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white">
@@ -26,9 +26,13 @@
         <h3 class="text-4xl font-bold mb-6 text-center"> Popular Albums 🎶</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
             <div class="bg-gray-800 p-4 rounded-lg shadow-lg hover:scale-105 transition duration-300">
-                <img src="https://github.com/blooper-ser/musickkk/blob/main/cover/rifleclub.png" class="rounded-lg w-full" alt="Album Cover">
+                <img src="C:\Users\ADMIN\OneDrive\Documents\GITHUB\musickkk\cover\rifleclub.png" class="rounded-lg w-full" alt="Album Cover">
                 <h4 class="mt-3 text-2xl font-semibold">Rifle Club</h4>
-                <button class="mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg shadow-md hover:bg-blue-600 transition duration-300">Play</button>
+                <a href="C:\Users\ADMIN\OneDrive\Documents\GITHUB\musickkk\rifelclub.html">
+                    <button class="mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg shadow-md hover:bg-blue-600 transition duration-300">
+                      Play
+                    </button>
+                  </a>                  
             </div>
             <div class="bg-gray-800 p-4 rounded-lg shadow-lg hover:scale-105 transition duration-300">
                 <img src="https://via.placeholder.com/300" class="rounded-lg w-full" alt="Album Cover">
