added login page code three coverpages etc..

--- a/ikkachi music 2.0.1.html
+++ b/ikkachi music 2.0.1.html
@@ -10,7 +10,7 @@
     <nav class="flex justify-between items-center p-5 bg-gradient-to-r from-blue-500 to-green-500 shadow-lg">
         <h1 class="text-3xl font-extrabold">ikkachi Music</h1>
         <ul class="flex space-x-6 text-lg">
-            <li><a href="#" class="hover:text-yellow-300 transition duration-300">Home</a></li>
+            <li><a href="ikkachi music 2.0.1.html" class="hover:text-yellow-300 transition duration-300">Home</a></li>
             <li><a href="#" class="hover:text-yellow-300 transition duration-300">Trending</a></li>
             <li><a href="#" class="hover:text-yellow-300 transition duration-300">New Releases</a></li>
             <li><a href="#" class="hover:text-yellow-300 transition duration-300">Genres</a></li>
@@ -46,18 +46,6 @@
             </div>
         </div>
     </section>
-    
-    <section class="p-10 text-center">
-        <h3 class="text-4xl font-bold mb-6">🎶 Now Playing</h3>
-        <div class="bg-gray-800 p-6 rounded-lg inline-block shadow-lg">
-            <p class="text-xl font-semibold">The Weeknd - São Paulo</p>
-            <audio controls class="mt-4 w-64">
-                <source src="C:\Users\ADMIN\OneDrive\Documents\GITHUB\musickkk\songs\The Weeknd - São Paulo.mp3" type="audio/mpeg">
-                Your browser does not support this audio element.
-            </audio>
-        </div>
-    </section>
-    
     <footer class="text-center p-5 bg-gradient-to-r from-blue-500 to-green-500 mt-10 shadow-lg">
         <p class="text-lg">&copy; 2025 ikkachi Music. All rights reserved.</p>
     </footer>
