--- a/ikkachi music 2.0.1.html
+++ b/ikkachi music 2.0.1.html
@@ -11,9 +11,9 @@
         <h1 class="text-3xl font-extrabold">ikkachi Music</h1>
         <ul class="flex space-x-6 text-lg">
             <li><a href="ikkachi music 2.0.1.html" class="hover:text-yellow-300 transition duration-300">Home</a></li>
-            <li><a href="#" class="hover:text-yellow-300 transition duration-300">Trending</a></li>
-            <li><a href="#" class="hover:text-yellow-300 transition duration-300">New Releases</a></li>
-            <li><a href="#" class="hover:text-yellow-300 transition duration-300">Genres</a></li>
+            <li><a href="ikkachi music 2.0.1.html" class="hover:text-yellow-300 transition duration-300">Popular</a></li>
+            <li><a href="#" class="hover:text-yellow-300 transition duration-300">Login</a></li>
+            <li><a href="#" class="hover:text-yellow-300 transition duration-300">Register</a></li>
         </ul>
     </nav>
     
@@ -26,9 +26,9 @@
         <h3 class="text-4xl font-bold mb-6 text-center"> Popular Albums 🎶</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
             <div class="bg-gray-800 p-4 rounded-lg shadow-lg hover:scale-105 transition duration-300">
-                <img src="C:\Users\ADMIN\OneDrive\Documents\GITHUB\musickkk\cover\rifleclub.png" class="rounded-lg w-full" alt="Album Cover">
+                <img src="cover\rifleclub.png" class="rounded-lg w-full" alt="Album Cover">
                 <h4 class="mt-3 text-2xl font-semibold">Rifle Club</h4>
-                <a href="C:\Users\ADMIN\OneDrive\Documents\GITHUB\musickkk\rifelclub.html">
+                <a href="rifelclub.html">
                     <button class="mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg shadow-md hover:bg-blue-600 transition duration-300">
                       Play
                     </button>
