changed name of home page to index

--- a/user.html
+++ b/user.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ikkachi Music Login PageS</title>
+    <title>ikkachi Music Login Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(135deg, #11053d, #02112c);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
             color: #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
         }
+
         nav {
             width: 100%;
             background: linear-gradient(to right, #1e3a8a, #047857);
@@ -21,13 +22,14 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-bottom: 4px solid #ffcc00;
+            border-bottom: 4px solid #060606;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
         }
 
         nav h1 {
             font-size: 24px;
             font-weight: bold;
+            color: white;
         }
 
         nav ul {
@@ -55,11 +57,12 @@
 
         .container {
             background-color: rgba(255, 255, 255, 0.9);
-            border-radius: 12px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+            border-radius: 40px;
+            box-shadow: 0 8px 20px rgba(48, 193, 250, 0.715);
             padding: 40px;
-            width: 350px;
+            width: 250px;
             text-align: center;
+            margin-top: 100px; /* Add margin to separate from the nav */
         }
 
         .container h2 {
@@ -93,7 +96,7 @@
         }
 
         .form-group button {
-            background-color: #6a11cb;
+            background-color: #e0e014;
             color: white;
             padding: 12px 20px;
             border: none;
@@ -119,7 +122,7 @@
         }
 
         .switch-form a {
-            color: #6a11cb;
+            color: #100cf3;
             text-decoration: none;
             font-weight: 600;
         }
@@ -130,24 +133,22 @@
     </style>
 </head>
 <body>
-    <nav class="flex justify-between items-center p-5 bg-gradient-to-r from-blue-500 to-green-500 shadow-lg">
-        <h1 class="text-3xl font-extrabold">ikkachi Music</h1>
-        <ul class="flex space-x-6 text-lg">
-            <li><a href="#" class="hover:text-yellow-300 transition duration-300">Home</a></li>
-            <li><a href="#" class="hover:text-yellow-300 transition duration-300">Trending</a></li>
-            <li><a href="#" class="hover:text-yellow-300 transition duration-300">New Releases</a></li>
-            <li><a href="#" class="hover:text-yellow-300 transition duration-300">Genres</a></li>
+    <!-- Navigation Bar -->
+    <nav>
+        <h1>ikkachi Music</h1>
+        <ul>
+            <li><a href="index.html" class="hover:text-yellow-300 transition duration-300">Home</a></li>
+            <li><a href="ikkachi music 2.0.1.html" class="hover:text-yellow-300 transition duration-300">Popular</a></li>
+            <li><a href="user.html" class="hover:text-yellow-300 transition duration-300">Login | Register</a></li>
         </ul>
     </nav>
+
+    <!-- Login Container -->
     <div class="container" id="loginContainer">
         <h2>Login</h2>
         <form id="loginForm" onsubmit="return validateLogin()">
             <div class="form-group">
-                <label for="loginUsername">Username:</label>
-                <input type="text" id="loginUsername" name="loginUsername" required>
-            </div>
-            <div class="form-group">
-                <label for="loginUsername">Email:</label>
+                <label for="loginEmail">Email:</label>
                 <input type="email" id="loginEmail" name="loginEmail" required>
             </div>
             <div class="form-group">
@@ -160,10 +161,11 @@
             <div id="loginErrorMessage" class="error-message"></div>
         </form>
         <div class="switch-form">
-            <a href="#" onclick="showRegister()">Register</a>
+            New to ikkachi Music? <a href="#" onclick="showRegister()"> Register</a>
         </div>
     </div>
 
+    <!-- Register Container -->
     <div class="container" id="registerContainer" style="display: none;">
         <h2>Register</h2>
         <form id="registerForm" onsubmit="return validateRegister()">
@@ -199,36 +201,39 @@
         function showRegister() {
             document.getElementById('loginContainer').style.display = 'none';
             document.getElementById('registerContainer').style.display = 'block';
+            document.getElementById('loginErrorMessage').textContent = ''; // Clear login error message
         }
 
         function showLogin() {
             document.getElementById('registerContainer').style.display = 'none';
             document.getElementById('loginContainer').style.display = 'block';
+            document.getElementById('registerErrorMessage').textContent = ''; // Clear register error message
         }
 
         function validateLogin() {
-            const username = document.getElementById('loginUsername').value;
-            const Email = document.getElementById('loginEmail').value;
+            const email = document.getElementById('loginEmail').value;
             const password = document.getElementById('loginPassword').value;
             const errorMessage = document.getElementById('loginErrorMessage');
 
-            if (users[username] === password) {
-                window.location.href = "cars.html"; // Redirect on success
+            const user = Object.keys(users).find(username => users[username].email === email);
+
+            if (user && users[user].password === password) {
+                window.location.href = "ikkachi music 2.0.1.html"; // Redirect to home page
                 return false;
             } else {
-                errorMessage.textContent = "Incorrect username or password.";
+                errorMessage.textContent = "Incorrect email or password.";
                 return false;
             }
         }
 
         function validateRegister() {
             const username = document.getElementById('registerUsername').value;
-            const Email = document.getElementById('registerEmail').value;
+            const email = document.getElementById('registerEmail').value;
             const password = document.getElementById('registerPassword').value;
             const confirmPassword = document.getElementById('confirmPassword').value;
             const errorMessage = document.getElementById('registerErrorMessage');
 
-            if (username === '' || password === '' || confirmPassword === '') {
+            if (username === '' || email === '' || password === '' || confirmPassword === '') {
                 errorMessage.textContent = 'Please fill in all fields.';
                 return false;
             }
@@ -238,7 +243,12 @@
                 return false;
             }
 
-            users[username] = password;
+            if (users[username]) {
+                errorMessage.textContent = 'Username already exists.';
+                return false;
+            }
+
+            users[username] = { email, password };
             localStorage.setItem('users', JSON.stringify(users));
 
             errorMessage.textContent = "Registration Successful.";
@@ -247,8 +257,5 @@
             return false;
         }
     </script>
-
-
-    
 </body>
 </html>
