--- a/rifelclub.html
+++ b/rifelclub.html
@@ -73,6 +73,7 @@
             box-shadow: 0 10px 40px rgba(0, 255, 128, 0.2);
             max-height: 400px; /* Scroll limit */
             overflow-y: auto; /* Enable scroll */
+            margin-top: -50px;
         }
 
         .music-list::-webkit-scrollbar {
@@ -121,6 +122,7 @@
             border-radius: 20px;
             box-shadow: 0 0 40px rgba(0, 255, 128, 0.5);
             text-align: center;
+            margin-top: -50px;
         }
 
         .music-player img {
@@ -185,13 +187,17 @@
     <nav>
         <h1>ikkachi Music</h1>
         <ul>
-            <li><a href="ikkachi music 2.0.1.html" class="hover:text-yellow-300 transition duration-300">Home</a></li>
+            <li><a href="index.html" class="hover:text-yellow-300 transition duration-300">Home</a></li>
             <li><a href="ikkachi music 2.0.1.html" class="hover:text-yellow-300 transition duration-300">Popular</a></li>
-            <li><a href="#" class="hover:text-yellow-300 transition duration-300">Login</a></li>
-            <li><a href="#" class="hover:text-yellow-300 transition duration-300">Register</a></li>
+            <li><a href="user.html" class="hover:text-yellow-300 transition duration-300">Login | Register</a></li>
         </ul>
     </nav>
-
+&nbsp;
+&nbsp;
+    <header class="text-center py-20 bg-cover bg-center" style="background-image: url('');">
+        <h2 class="text-5xl font-extrabold drop-shadow-lg">Rifle Club (Original Motion Picture Soundtrack)</h2>
+        <p class="text-gray-300 mt-2 text-lg">Rex Vijayan • 2024 • 4 songs, 14min 29sec</p>
+    </header>
     <div class="container">
         <!-- Left Side: Scrollable Song List -->
         <div class="music-list">
