--- a/ikkachi music 2.0.1.html
+++ b/ikkachi music 2.0.1.html
@@ -34,9 +34,13 @@
                   </a>                  
             </div>
             <div class="bg-gray-800 p-4 rounded-lg shadow-lg hover:scale-105 transition duration-300">
-                <img src="https://via.placeholder.com/300" class="rounded-lg w-full" alt="Album Cover">
-                <h4 class="mt-3 text-2xl font-semibold">Song Title - Artist</h4>
-                <button class="mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg shadow-md hover:bg-blue-600 transition duration-300">Play</button>
+                <img src="cover\l2.png" class="rounded-lg w-full" alt="Album Cover">
+                <h4 class="mt-3 text-2xl font-semibold">L2 Empuraan Trailer (Malayalam)</h4>
+                <a href="ott_page1.html">
+                   <button class="mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg shadow-md hover:bg-blue-600 transition duration-300">
+                    Play
+                  </button>
+                </a>
             </div>
             <div class="bg-gray-800 p-4 rounded-lg shadow-lg hover:scale-105 transition duration-300">
                 <img src="https://via.placeholder.com/300" class="rounded-lg w-full" alt="Album Cover">
