--- a/admin.html
+++ b/admin.html
@@ -35,7 +35,7 @@
 
 <script>
 
-const API_BASE = "http://localhost:5000/api";
+const API_BASE = "https://musickkk-3pj5.onrender.com/api";
 const token = localStorage.getItem("token");
 
 if (!token) {
