--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ikkachi Music</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="auth.js"></script>
 </head>
 <body class="bg-gray-900 text-white">
     <nav class="flex justify-between items-center p-5 bg-gradient-to-r from-blue-500 to-green-500 shadow-lg">
