--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="bg-black bg-opacity-50 p-10 rounded-lg">
             <h2 class="text-5xl font-bold mb-4">Welcome to ikkachi Music</h2>
             <p class="text-xl mb-8">Discover the best music from around the world.</p>
-            <a href="user.html" class="bg-yellow-300 text-gray-900 px-6 py-3 rounded-full font-semibold hover:bg-yellow-400 transition duration-300">Get Started</a>
+            <a href="pages/user.html" class="bg-yellow-300 text-gray-900 px-6 py-3 rounded-full font-semibold hover:bg-yellow-400 transition duration-300">Get Started</a>
         </div>
     </section>
     <!-- Footer -->
