--- a/pages/rifelclub.html
+++ b/pages/rifelclub.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rifle Club (Original Motion Picture Soundtrack)</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="auth.js"></script>
+    <script src="../auth.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 
