fix: update logout redirect path to correct relative URL

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -46,7 +46,7 @@ if (!token) {
 // Logout
 function logout() {
   localStorage.removeItem("token");
-  window.location.href = "pages/user.html";
+  window.location.href = "../pages/user.html";
 }
 
 // Load all users
